--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "heavens-r",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Swiichy.github.io/Heavens-r",
+  "homepage": "https://Swiichy.github.io/heavens-r",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
