--- a/package.json
+++ b/package.json
@@ -12,17 +12,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
-    "framer-motion": "^2.1.4",
     "mongoose": "^5.12.13",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
-    "websocket-extensions": "^0.1.4"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start-client": "react-scripts start",
